--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "eslint-config-next": "15.4.4",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "micromatch": "^4.0.8",
