feat: 파일 업로드 보안 강화 및 CSRF 토큰 수정
- 파일명 sanitization 유틸리티 구현 (path traversal, XSS 방지)
- SHA-256 해시 기반 파일 중복 체크 기능 추가
- CSRF 토큰 누락 부분 수정 (커뮤니티 생성, 조회수 API)
- 파일 업로드 API에 sanitization 및 중복 체크 적용
- 포괄적인 테스트 케이스 추가
- Prisma 스키마에 파일 해시 필드 추가

--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,18 @@
     "app/api/notifications/sse/route.ts": {
       "maxDuration": 300
     },
+    "app/api/ai/qa-bot/route.ts": {
+      "maxDuration": 60
+    },
     "app/api/**/route.ts": {
       "maxDuration": 30
     }
   },
-  "regions": ["icn1"]
+  "regions": ["icn1"],
+  "crons": [
+    {
+      "path": "/api/ai/qa-bot",
+      "schedule": "0 9 * * *"
+    }
+  ]
 }
