--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "next": "15.4.4",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.2",
     "rate-limiter-flexible": "^7.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
